feat: Update JSON format and swagger docs
