# cmd/model/api_data.go
@@ -1,6 +1,8 @@
 package model
 
 type APIData struct {
-	LastPage int     `json:"last_page"` // Last page of requested board
-	Posts    []Board `json:"posts"`     // Data of board
+	StatusCode int     `json:"status_code"` // Status code of request
+	LastPage   int     `json:"last_page"`   // Last page of requested board
+	Posts      []Board `json:"posts"`       // Data of board
+	Error      string  `json:"error"`       // Error message
 }
